k8s/foundry/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tz-wrapped-frontend
  namespace: tz-wrapped
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tz-wrapped-frontend.prod.gke.papers.tech
      secretName: tz-wrapped-prod-tls
    # - hosts:
    #     - foundry.wrappedtz.io
    #   secretName: tz-wrapped-mvp-prod-tls
  rules:
    - host: tz-wrapped-frontend.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tz-wrapped-frontend
              servicePort: 80
    # - host: foundry.wrappedtz.io
    #   http:
    #     paths:
    #       - backend:
    #           serviceName: tz-wrapped-frontend
    #           servicePort: 80
